--- a/styles/GridItem.module.css
+++ b/styles/GridItem.module.css
@@ -3,11 +3,14 @@
   margin-bottom: .5rem;
   border: 1px solid #eaeaea;
   background-color: orange;
-  padding: 0;
 }
 
 .card p {
   margin: 0;
   font-size: 0.75rem;
   font-weight: 600;
+}
+
+.img {
+  max-width: 100%;
 }
